package service

import (
	"context"
	"io"

	aiv1 "universal/api/ai/v1"
	pb "universal/api/gateway/v1"
)

type KnowledgeService struct {
	pb.UnimplementedKnowledgeServer
}

func NewKnowledgeService() *KnowledgeService {
	return &KnowledgeService{}
}

func (s *KnowledgeService) CreateKnowledgeBase(ctx context.Context, req *aiv1.CreateKnowledgeBaseRequest) (*aiv1.CreateKnowledgeBaseReply, error) {
	return &aiv1.CreateKnowledgeBaseReply{}, nil
}
func (s *KnowledgeService) UpdateKnowledgeBase(ctx context.Context, req *aiv1.UpdateKnowledgeBaseRequest) (*aiv1.UpdateKnowledgeBaseReply, error) {
	return &aiv1.UpdateKnowledgeBaseReply{}, nil
}
func (s *KnowledgeService) DeleteKnowledgeBase(ctx context.Context, req *aiv1.DeleteKnowledgeBaseRequest) (*aiv1.DeleteKnowledgeBaseReply, error) {
	return &aiv1.DeleteKnowledgeBaseReply{}, nil
}
func (s *KnowledgeService) ListKnowledgeBases(ctx context.Context, req *aiv1.ListKnowledgeBasesRequest) (*aiv1.ListKnowledgeBasesReply, error) {
	return &aiv1.ListKnowledgeBasesReply{}, nil
}
func (s *KnowledgeService) GetKnowledgeBase(ctx context.Context, req *aiv1.GetKnowledgeBaseRequest) (*aiv1.GetKnowledgeBaseReply, error) {
	return &aiv1.GetKnowledgeBaseReply{}, nil
}
func (s *KnowledgeService) UploadDocument(ctx context.Context, req *aiv1.UploadDocumentRequest) (*aiv1.UploadDocumentReply, error) {
	return &aiv1.UploadDocumentReply{}, nil
}
func (s *KnowledgeService) BatchUploadDocuments(conn pb.Knowledge_BatchUploadDocumentsServer) error {
	for {
		req, err := conn.Recv()
		if err == io.EOF {
			return nil
		}
		if err != nil {
			return err
		}
		// Process req here if needed
		_ = req

		err = conn.Send(&aiv1.BatchUploadDocumentsReply{})
		if err != nil {
			return err
		}
	}
}
func (s *KnowledgeService) UpdateDocument(ctx context.Context, req *aiv1.UpdateDocumentRequest) (*aiv1.UpdateDocumentReply, error) {
	return &aiv1.UpdateDocumentReply{}, nil
}
func (s *KnowledgeService) DeleteDocument(ctx context.Context, req *aiv1.DeleteDocumentRequest) (*aiv1.DeleteDocumentReply, error) {
	return &aiv1.DeleteDocumentReply{}, nil
}
func (s *KnowledgeService) ListDocuments(ctx context.Context, req *aiv1.ListDocumentsRequest) (*aiv1.ListDocumentsReply, error) {
	return &aiv1.ListDocumentsReply{}, nil
}
func (s *KnowledgeService) GetDocument(ctx context.Context, req *aiv1.GetDocumentRequest) (*aiv1.GetDocumentReply, error) {
	return &aiv1.GetDocumentReply{}, nil
}
func (s *KnowledgeService) ProcessDocument(ctx context.Context, req *aiv1.ProcessDocumentRequest) (*aiv1.ProcessDocumentReply, error) {
	return &aiv1.ProcessDocumentReply{}, nil
}
func (s *KnowledgeService) SearchKnowledge(ctx context.Context, req *aiv1.SearchKnowledgeRequest) (*aiv1.SearchKnowledgeReply, error) {
	return &aiv1.SearchKnowledgeReply{}, nil
}
func (s *KnowledgeService) HybridSearch(ctx context.Context, req *aiv1.HybridSearchRequest) (*aiv1.HybridSearchReply, error) {
	return &aiv1.HybridSearchReply{}, nil
}
func (s *KnowledgeService) AdvancedSearch(ctx context.Context, req *aiv1.AdvancedSearchRequest) (*aiv1.AdvancedSearchReply, error) {
	return &aiv1.AdvancedSearchReply{}, nil
}
func (s *KnowledgeService) GetKnowledgeChunk(ctx context.Context, req *aiv1.GetKnowledgeChunkRequest) (*aiv1.GetKnowledgeChunkReply, error) {
	return &aiv1.GetKnowledgeChunkReply{}, nil
}
func (s *KnowledgeService) UpdateKnowledgeChunk(ctx context.Context, req *aiv1.UpdateKnowledgeChunkRequest) (*aiv1.UpdateKnowledgeChunkReply, error) {
	return &aiv1.UpdateKnowledgeChunkReply{}, nil
}
func (s *KnowledgeService) ListKnowledgeChunks(ctx context.Context, req *aiv1.ListKnowledgeChunksRequest) (*aiv1.ListKnowledgeChunksReply, error) {
	return &aiv1.ListKnowledgeChunksReply{}, nil
}
func (s *KnowledgeService) ReindexKnowledgeBase(ctx context.Context, req *aiv1.ReindexKnowledgeBaseRequest) (*aiv1.ReindexKnowledgeBaseReply, error) {
	return &aiv1.ReindexKnowledgeBaseReply{}, nil
}
func (s *KnowledgeService) GetKnowledgeBaseStats(ctx context.Context, req *aiv1.GetKnowledgeBaseStatsRequest) (*aiv1.GetKnowledgeBaseStatsReply, error) {
	return &aiv1.GetKnowledgeBaseStatsReply{}, nil
}
func (s *KnowledgeService) AnalyzeKnowledgeBase(ctx context.Context, req *aiv1.AnalyzeKnowledgeBaseRequest) (*aiv1.AnalyzeKnowledgeBaseReply, error) {
	return &aiv1.AnalyzeKnowledgeBaseReply{}, nil
}
